src/objects/Valuation_Notification__c.object
<CustomObject>
    <description>Child of parent valuation report. For use with Fast surveyors integration HPP CAA</description>
    <fields>
        <fullName>CaseReference__c</fullName>
        <label>CaseReference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Valuation__c</fullName>
        <description>Date of valuation carried out by Fast Surveyors
For use with valuation notifications</description>
        <label>Date of Valuation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Comments__c</fullName>
        <description>For use with valuation notifications</description>
        <label>General Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_days_since_created__c</fullName>
        <formula>Today()- DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days since created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Valuation_Report__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <formula>Valuation_Report__r.Opportunity__r.SellerName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sellers_delegated_approver_email__c</fullName>
        <label>Sellers delegated approver email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sellers_email__c</fullName>
        <label>Sellers email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Valuation_Report__c</fullName>
        <label>Valuation Report</label>
        <referenceTo>Valuation_Report__c</referenceTo>
        <relationshipLabel>Valuation Notifications</relationshipLabel>
        <relationshipName>Valuation_Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Valuation Notification</label>
    <nameField>
        <displayFormat>VN{0000}</displayFormat>
        <label>Valuation Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valuation Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Valuation_booked</fullName>
        <active>true</active>
        <errorConditionFormula>Date_of_Valuation__c &lt; today()</errorConditionFormula>
        <errorDisplayField>Date_of_Valuation__c</errorDisplayField>
        <errorMessage>The valuation booked date cannot be in the past.</errorMessage>
    </validationRules>
</CustomObject>